--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        <title>Sirikoone's Domain</title>
     </head>
     <body>
-        <h1>YOU ARE NOW CONNECTED TO ORCMAN.NET</h1>
+        <h1>YOU ARE NOW CONNECTED TO SIRIKOONE.COM</h1>
         <p>
             There's nothing here yet for you.
             <br>
