--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1">
-       <title>Sirikoone's Domain</title>
+       <title>ORCMAN.NETn</title>
     </head>
     <body>
-        <h1>YOU ARE NOW CONNECTED TO SIRIKOONE.COM</h1>
+        <h1>YOU ARE NOW CONNECTED TO 0RCMAN.NET</h1>
         <p>
             There's nothing here yet for you.
             <br>
