--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1">
-       <title>ORCMAN.NETn</title>
+       <title>ORCMAN.NET</title>
     </head>
     <body>
         <h1>YOU ARE NOW CONNECTED TO ORCMAN.NET</h1>
