--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     </head>
     <body>
         <h1>YOU ARE NOW CONNECTED TO ORCMAN.NET</h1>
+        <hr>
         <p>
-            There's nothing here yet for you.
+            There's nothing here yet for you yet.
             <br>
-            <img src="knight.png">
+            Are you looking for <a href="sirikoone.com">sirikoone.com?</a>
+            <img src="knight1.png">
             
         </p>
     </body>
